--- a/docs/_layouts/head.html
+++ b/docs/_layouts/head.html
@@ -1,3 +1,11 @@
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    MathJax.typesetPromise();
+  });
+</script>
